--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "homepage": "https://chryskar.github.io/",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bibtex-parse-js": "^0.0.24",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,6 +43,7 @@
   },
   "devDependencies": {
     "gh-pages": "^6.0.0",
+    "raw-loader": "^4.0.2",
     "react-router-dom": "^6.18.0"
   }
 }
