--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.14.5",
+    "@fortawesome/fontawesome-free": "^6.5.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "academicons": "^1.9.2",
     "bibtex-parse-js": "^0.0.24",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
