--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "academicons": "^1.9.2",
-    "bibtex-parse-js": "^0.0.24",
+    "bibtex-parse-js": "^0.0.23",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,8 +43,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
+    "gh-pages": "^6.3.0",
     "raw-loader": "^4.0.2",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "react-scripts": "^5.0.1"
   }
 }
